--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,6 @@
 	"name": "fuseboxy/fuseboxy-auth",
 	"description": "Fuseboxy Auth - Login Form, User Management, User Simulation, etc.",
 	"license": "MIT",
-	"require": {}
+    "type": "fuseboxy-module",
+    "require": { "fuseboxy/fuseboxy-installer": "*" }
 }
