specify each file to autoload

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
 	"name": "fuseboxy/fuseboxy-auth",
 	"description": "Fuseboxy Auth - Login Form, User Management, User Simulation, etc.",
 	"license": "MIT",
-    "type": "fuseboxy-module",
-    "require": { "fuseboxy/fuseboxy-installer": "*" },
-    "autoload": { "files": ["app/model/"] }
+	"type": "fuseboxy-module",
+	"require": { "fuseboxy/fuseboxy-installer": "*" },
+	"autoload": {
+		"files": [
+			"app/model/Auth.php",
+			"app/model/Sim.php"
+		]
+	}
 }
