--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,13 @@
 	"description": "Fuseboxy Auth - Login Form, User Management, User Simulation, etc.",
 	"license": "MIT",
 	"type": "fuseboxy-module",
-	"require": { "fuseboxy/fuseboxy-installer": "2.2.x" },
-	"autoload": { "files": [ "app/model/Auth.php", "app/model/Sim.php" ] }
+	"require": {
+		"fuseboxy/fuseboxy-installer": "1.*"
+	},
+	"autoload": {
+		"files": [
+			"app/model/Auth.php",
+			"app/model/Sim.php"
+		]
+	}
 }
